-
Bug
-
Resolution: Fixed
-
Minor
-
Lustre 2.1.0
-
None
-
3
-
4863
sanity 27q hang on local testing.
I think this bug was introduced by LU-325, which changes the ENOSPC condition in handle_async_create() from OSCC_FLAG_NOSPC to OSCC_FLAG_NOSPC_BLK, however, the OSCC_FLAG_NOSPC_BLK never been set on client, because server wrongly processed the oa->o_valid: filter_precreate() set OBD_MD_FLFLAGS & OBD_FL_NOSPC_BLK on ENOSPC, however, the OBD_MD_FLFLAGS is reset as "OBD_MD_FLID | OBD_MD_FLGROUP" in filter_handle_precreate().
The end result is that the create process will never been wakeup when OSTs running of space.
- Trackbacks
-
Changelog 2.1
Changes from version 2.1.0 to version 2.1.1 Server support for kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.12.1.el5 (RHEL5) 2.6.32220.el6 (RHEL6) 2.6.32.360....
-
Changelog 2.2
version 2.2.0 Support for networks: o2iblnd OFED 1.5.4 Server support for kernels: 2.6.32220.4.2.el6 (RHEL6) Client support for unpatched kernels: 2.6.18274.18.1.el5 (RHEL5) 2.6.32220.4.2.el6 (RHEL6) 2.6.32.360....